SignalTrader/Signals/SignalScript/Generated/SignalScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.11.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/cogamble/Projects/Personal/SignalTrader/SignalTrader/Signals/SignalScript/SignalScript.g4 by ANTLR 4.11.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace SignalTrader.Signals.SignalScript.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.11.1")]
[System.CLSCompliant(false)]
public partial class SignalScriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, WS=2, COMMENT=3, STRING=4, TRUE=5, FALSE=6, SHORT=7, LONG=8, BUY=9, 
		SELL=10, BID=11, ASK=12, LAST=13, MARKET=14, LIMIT=15, CROSS=16, ISOLATED=17, 
		ID=18, FLOAT=19, FLOATP=20, INT=21, INTP=22, ASSIGN=23, PERCENT=24, LPAREN=25, 
		RPAREN=26, LBRACE=27, RBRACE=28, SEMI=29, COMMA=30, NEWLINE=31;
	public const int
		RULE_signal = 0, RULE_signalblock = 1, RULE_account = 2, RULE_funclist = 3, 
		RULE_func = 4, RULE_namedparamlist = 5, RULE_namedparam = 6, RULE_paramvalue = 7, 
		RULE_boolean = 8, RULE_side = 9, RULE_direction = 10, RULE_price = 11, 
		RULE_order = 12, RULE_leverage = 13;
	public static readonly string[] ruleNames = {
		"signal", "signalblock", "account", "funclist", "func", "namedparamlist", 
		"namedparam", "paramvalue", "boolean", "side", "direction", "price", "order", 
		"leverage"
	};

	private static readonly string[] _LiteralNames = {
		null, "'signal'", null, null, null, "'true'", "'false'", "'short'", "'long'", 
		"'buy'", "'sell'", "'bid'", "'ask'", "'last'", "'market'", "'limit'", 
		"'cross'", "'isolated'", null, null, null, null, null, "'='", "'%'", "'('", 
		"')'", "'{'", "'}'", "';'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "WS", "COMMENT", "STRING", "TRUE", "FALSE", "SHORT", "LONG", 
		"BUY", "SELL", "BID", "ASK", "LAST", "MARKET", "LIMIT", "CROSS", "ISOLATED", 
		"ID", "FLOAT", "FLOATP", "INT", "INTP", "ASSIGN", "PERCENT", "LPAREN", 
		"RPAREN", "LBRACE", "RBRACE", "SEMI", "COMMA", "NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SignalScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SignalScriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SignalScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SignalScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SignalContext : ParserRuleContext {
		public NamedparamlistContext parameters;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(SignalScriptParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(SignalScriptParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SignalScriptParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NamedparamlistContext namedparamlist() {
			return GetRuleContext<NamedparamlistContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(SignalScriptParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SignalblockContext signalblock() {
			return GetRuleContext<SignalblockContext>(0);
		}
		public SignalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_signal; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterSignal(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitSignal(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSignal(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SignalContext signal() {
		SignalContext _localctx = new SignalContext(Context, State);
		EnterRule(_localctx, 0, RULE_signal);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28;
			Match(T__0);
			State = 29;
			Match(LPAREN);
			State = 30;
			_localctx.parameters = namedparamlist();
			State = 31;
			Match(RPAREN);
			State = 34;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case SEMI:
				{
				State = 32;
				Match(SEMI);
				}
				break;
			case LBRACE:
				{
				State = 33;
				signalblock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 36;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SignalblockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(SignalScriptParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(SignalScriptParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AccountContext[] account() {
			return GetRuleContexts<AccountContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AccountContext account(int i) {
			return GetRuleContext<AccountContext>(i);
		}
		public SignalblockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_signalblock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterSignalblock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitSignalblock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSignalblock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SignalblockContext signalblock() {
		SignalblockContext _localctx = new SignalblockContext(Context, State);
		EnterRule(_localctx, 2, RULE_signalblock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			Match(LBRACE);
			State = 42;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 39;
				account();
				}
				}
				State = 44;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 45;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AccountContext : ParserRuleContext {
		public IToken name;
		public NamedparamlistContext parameters;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(SignalScriptParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(SignalScriptParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(SignalScriptParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FunclistContext funclist() {
			return GetRuleContext<FunclistContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(SignalScriptParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(SignalScriptParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NamedparamlistContext namedparamlist() {
			return GetRuleContext<NamedparamlistContext>(0);
		}
		public AccountContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_account; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterAccount(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitAccount(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAccount(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AccountContext account() {
		AccountContext _localctx = new AccountContext(Context, State);
		EnterRule(_localctx, 4, RULE_account);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			_localctx.name = Match(ID);
			State = 48;
			Match(LPAREN);
			State = 50;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 49;
				_localctx.parameters = namedparamlist();
				}
			}

			State = 52;
			Match(RPAREN);
			State = 53;
			Match(LBRACE);
			State = 54;
			funclist();
			State = 55;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunclistContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FuncContext[] func() {
			return GetRuleContexts<FuncContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncContext func(int i) {
			return GetRuleContext<FuncContext>(i);
		}
		public FunclistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funclist; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterFunclist(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitFunclist(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunclist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunclistContext funclist() {
		FunclistContext _localctx = new FunclistContext(Context, State);
		EnterRule(_localctx, 6, RULE_funclist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 57;
				func();
				}
				}
				State = 62;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncContext : ParserRuleContext {
		public IToken name;
		public NamedparamlistContext parameters;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(SignalScriptParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(SignalScriptParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(SignalScriptParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(SignalScriptParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NamedparamlistContext namedparamlist() {
			return GetRuleContext<NamedparamlistContext>(0);
		}
		public FuncContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_func; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterFunc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitFunc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncContext func() {
		FuncContext _localctx = new FuncContext(Context, State);
		EnterRule(_localctx, 8, RULE_func);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			_localctx.name = Match(ID);
			State = 64;
			Match(LPAREN);
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 65;
				_localctx.parameters = namedparamlist();
				}
			}

			State = 68;
			Match(RPAREN);
			State = 69;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamedparamlistContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NamedparamContext[] namedparam() {
			return GetRuleContexts<NamedparamContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NamedparamContext namedparam(int i) {
			return GetRuleContext<NamedparamContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(SignalScriptParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(SignalScriptParser.COMMA, i);
		}
		public NamedparamlistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namedparamlist; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterNamedparamlist(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitNamedparamlist(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamedparamlist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamedparamlistContext namedparamlist() {
		NamedparamlistContext _localctx = new NamedparamlistContext(Context, State);
		EnterRule(_localctx, 10, RULE_namedparamlist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			namedparam();
			State = 76;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 72;
				Match(COMMA);
				State = 73;
				namedparam();
				}
				}
				State = 78;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamedparamContext : ParserRuleContext {
		public IToken name;
		public ParamvalueContext value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(SignalScriptParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(SignalScriptParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParamvalueContext paramvalue() {
			return GetRuleContext<ParamvalueContext>(0);
		}
		public NamedparamContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namedparam; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterNamedparam(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitNamedparam(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamedparam(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamedparamContext namedparam() {
		NamedparamContext _localctx = new NamedparamContext(Context, State);
		EnterRule(_localctx, 12, RULE_namedparam);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			_localctx.name = Match(ID);
			State = 80;
			Match(ASSIGN);
			State = 81;
			_localctx.value = paramvalue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamvalueContext : ParserRuleContext {
		public ParamvalueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_paramvalue; } }
	 
		public ParamvalueContext() { }
		public virtual void CopyFrom(ParamvalueContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LeverageParamValueContext : ParamvalueContext {
		[System.Diagnostics.DebuggerNonUserCode] public LeverageContext leverage() {
			return GetRuleContext<LeverageContext>(0);
		}
		public LeverageParamValueContext(ParamvalueContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterLeverageParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitLeverageParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLeverageParamValue(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BooleanParamValueContext : ParamvalueContext {
		[System.Diagnostics.DebuggerNonUserCode] public BooleanContext boolean() {
			return GetRuleContext<BooleanContext>(0);
		}
		public BooleanParamValueContext(ParamvalueContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterBooleanParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitBooleanParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBooleanParamValue(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OrderParamValueContext : ParamvalueContext {
		[System.Diagnostics.DebuggerNonUserCode] public OrderContext order() {
			return GetRuleContext<OrderContext>(0);
		}
		public OrderParamValueContext(ParamvalueContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterOrderParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitOrderParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrderParamValue(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IntParamValueContext : ParamvalueContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(SignalScriptParser.INT, 0); }
		public IntParamValueContext(ParamvalueContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterIntParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitIntParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntParamValue(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IdentifierParamValueContext : ParamvalueContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(SignalScriptParser.ID, 0); }
		public IdentifierParamValueContext(ParamvalueContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterIdentifierParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitIdentifierParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifierParamValue(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DirectionParamValueContext : ParamvalueContext {
		[System.Diagnostics.DebuggerNonUserCode] public DirectionContext direction() {
			return GetRuleContext<DirectionContext>(0);
		}
		public DirectionParamValueContext(ParamvalueContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterDirectionParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitDirectionParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirectionParamValue(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PriceParamValueContext : ParamvalueContext {
		[System.Diagnostics.DebuggerNonUserCode] public PriceContext price() {
			return GetRuleContext<PriceContext>(0);
		}
		public PriceParamValueContext(ParamvalueContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.EnterPriceParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISignalScriptListener typedListener = listener as ISignalScriptListener;
			if (typedListener != null) typedListener.ExitPriceParamValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISignalScriptVisitor<TResult> typedVisitor = visitor as ISignalScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPriceParamValue(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SideParamValueContext : ParamvalueContext {
		[System.Diagnostics.DebuggerNonUserCode] public SideContext side() {
			return GetRuleContext<SideContext>(0);
		}
		public SideParamValueContext(ParamvalueContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
